--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maaxgr/ang-jsoneditor",
-  "version": "2.0.0",
+  "version": "11.0.0",
   "private": false,
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
     "watch": "onchange 'ang-jsoneditor/**/*.ts' -- npm run build:lib && npm run build:libcopy",
     "build:full": "npm run build:lib && npm run build:app",
     "publishnpm": "cp README.md ang-jsoneditor/README.md && npm run build:lib && cd dist/ang-jsoneditor && npm publish",
+    "publishnpmbeta": "cp README.md ang-jsoneditor/README.md && npm run build:lib && cd dist/ang-jsoneditor && npm publish --tag beta",
     "unpublish": "npm deprecate -f 'ang-jsoneditor@1.9.3' 'this package has been deprecated'",
     "test": "npm run test:dev && npm run e2e",
     "test:dev": "ng test dev --watch=false",
@@ -28,25 +29,25 @@
     "rebuildsass": "npm rebuild node-sass"
   },
   "dependencies": {
-    "@angular/common": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/forms": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
-    "@angular/platform-browser-dynamic": "^12.0.0",
-    "@angular/router": "^12.0.0",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/forms": "^11.0.0",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
+    "@angular/router": "^11.0.0",
     "core-js": "^3.6.4",
     "jsoneditor": "^9.5.7",
     "rxjs": "*",
-    "webpack": "^5.0.0",
+    "webpack": "^4.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.0",
-    "@angular-devkit/schematics": "^12.0.0",
-    "@angular/cli": "^12.0.0",
-    "@angular/compiler-cli": "^12.0.0",
-    "@angular/language-service": "^12.0.0",
+    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular-devkit/schematics": "^11.0.0",
+    "@angular/cli": "^11.0.0",
+    "@angular/compiler-cli": "^11.0.0",
+    "@angular/language-service": "^11.0.0",
     "@types/jasmine": "3.3.8",
     "@types/node": "^13.7.1",
     "codelyzer": "~6.0.0",
@@ -60,13 +61,12 @@
     "karma-coverage-istanbul-reporter": "^2.0.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.0.0",
+    "ng-packagr": "^11.0.0",
     "protractor": "~7.0.0",
     "rimraf": "^2.7.1",
     "ts-node": "~7.0.0",
-    "tsickle": "^0.43.0",
     "tslib": "^2.3.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.3.3"
+    "typescript": "~4.0.0"
   }
 }
