--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "tsickle": "^0.43.0",
     "tslib": "^2.3.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.3.3"
+    "typescript": "4.4"
   }
 }
