--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@maaxgr/ang-jsoneditor",
-  "version": "12.0.0",
+  "name": "@mharisko/ang-jsoneditor",
+  "version": "13.0.0",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/MaaxGr/ang-jsoneditor"
+    "url": "https://github.com/mharisko/ang-jsoneditor"
   },
   "license": "MIT",
   "scripts": {
@@ -28,25 +28,25 @@
     "rebuildsass": "npm rebuild node-sass"
   },
   "dependencies": {
-    "@angular/common": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/forms": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
-    "@angular/platform-browser-dynamic": "^12.0.0",
-    "@angular/router": "^12.0.0",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/forms": "^13.3.0",
+    "@angular/platform-browser": "^13.3.0",
+    "@angular/platform-browser-dynamic": "^13.3.0",
+    "@angular/router": "^13.3.0",
     "core-js": "^3.6.4",
-    "jsoneditor": "^9.5.7",
+    "jsoneditor": "^9.7.4",
     "rxjs": "*",
     "webpack": "^5.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.0",
-    "@angular-devkit/schematics": "^12.0.0",
-    "@angular/cli": "^12.0.0",
-    "@angular/compiler-cli": "^12.0.0",
-    "@angular/language-service": "^12.0.0",
+    "@angular-devkit/build-angular": "^13.3.0",
+    "@angular-devkit/schematics": "^13.3.0",
+    "@angular/cli": "^13.3.0",
+    "@angular/compiler-cli": "^13.3.0",
+    "@angular/language-service": "^13.3.0",
     "@types/jasmine": "3.3.8",
     "@types/node": "^13.7.1",
     "codelyzer": "~6.0.0",
@@ -60,7 +60,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.0.0",
+    "ng-packagr": "^13.2.1",
     "protractor": "~7.0.0",
     "rimraf": "^2.7.1",
     "ts-node": "~7.0.0",
